--- a/app.json
+++ b/app.json
@@ -1,29 +1,28 @@
 {
-    "name": "Ban all",
-    "description": "Power Packed Banall Within Seconds.",
-    "keywords": ["Zaid", "banall"],
-    "repository": "https://github.com/ITZ-ZAID/Banall",
+  "name": "Ban all",
+  "description": "Power Packed Banall Within Seconds.",
+  "keywords": ["Zaid", "banall"],
+  "repository": "https://github.com/ITZ-ZAID/Banall",
   "stack": "container",
-    "env": {
-        "TELEGRAM_TOKEN": {
-            "description": "Bot Token Else leave blank",
-            "required": true
-        },
-        "PYRO_SESSION": {
-            "description": "Pyrogram session",
-            "required": false,
-            "value": ""
-        },
-        "TELEGRAM_APP_HASH": {
-            "description": "Fill Api Hash from telegram.prg",
-            "required": true,
-            "value": ""
-        }
-        "TELEGRAM_APP_ID": {
-            "description": "Fill Api iD from telegram.prg",
-            "required": true,
-            "value": ""
-        }
-
+  "env": {
+    "TELEGRAM_TOKEN": {
+      "description": "Bot Token Else leave blank",
+      "required": true
+    },
+    "PYRO_SESSION": {
+      "description": "Pyrogram session",
+      "required": false,
+      "value": ""
+    },
+    "TELEGRAM_APP_HASH": {
+      "description": "Fill Api Hash from telegram.prg",
+      "required": true,
+      "value": ""
+    },
+    "TELEGRAM_APP_ID": {
+      "description": "Fill Api ID from telegram.prg",
+      "required": true,
+      "value": ""
     }
   }
+}
